# ChangeLog for net-dns/nsd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jul 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -nsd-3.1.0.ebuild, +nsd-3.1.1.ebuild:
  Version bump

  16 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -nsd-3.0.4.ebuild:
  Remove old version

  16 Jul 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  +nsd-3.1.0.ebuild, files/nsd.initd:
  Version bump with several ebuild changes, incorporating various changes from
  bug 128246, with thanks to dev tommy for reviewing

  10 Mar 2007; Markus Ullmann <jokey@gentoo.org> -nsd-2.3.5.ebuild:
  Drop old

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org> nsd-3.0.4.ebuild:
  remove trailing whitespace

  07 Mar 2007; Martin Hierling <mad@cc.fh-luh.de> +nsd-3.0.4.ebuild:
  version bump

  31 Jul 2006; Jakub Moc <jakub@gentoo.org> nsd-2.3.5.ebuild:
  Do not mix ewarn/einfo, add quoting

  28 Jun 2006; Martin Hierling <mad@cc.fh-luh.de> ChangeLog:
  New Ebuild for bug 128246 net-dns/nsd thanks to Albert Holm
