@@ -2,5 +2,5 @@ AUX nsd.cron 114 RMD160 ff9a08bd8bbe2ec6918e89ae29fa9fb0f9ecc101 SHA1 57834a23d3
 AUX nsd.initd 1140 RMD160 7a9bbe90ebc8984dac71d4f539f1412412fefa1f SHA1 aef7a5de8686a2c0b633e575328c7a80691df21c SHA256 273c4ae5f54f73fe9f8ef2755d09437c4e2306ab8ca5520528164fe502533bf8
 DIST nsd-3.1.1.tar.gz 829140 RMD160 1fafa837a9a4c8cb37ccec0c8802e29053853ea9 SHA1 5d175e2514294dba1336ab0e5421f68076af278f SHA256 aba5777672b7a2be1d61c6a8cb3346f7115f5d1dc3ae0ea94a55ef948aa3ff39
 EBUILD nsd-3.1.1.ebuild 2079 RMD160 07f7f0b8a2791fcfa0cd697066c5080a5dce0896 SHA1 2afd5e6bb54a9104ff47e9a20bf4646645ed65b8 SHA256 32b1d59aa8e98de369724b59583b037f18a33b100af38d74b683bda6fcf4ca5b
-MISC ChangeLog 1049 RMD160 b18fc5a70101b152f8f837fab79bda36ee0a39ab SHA1 4c572a92c4488a2ad41fd66e2931aa44312ae21c SHA256 c17833ec305b63ad757f113bb555fa9c856f26179ad6c5bc89a67721af4e6793
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 1170 RMD160 1097c9290170c53ac07d6150bb276e381e3e2e92 SHA1 60676c7eda4a00add61e3e94689c751284393039 SHA256 188de771b9c7c797dd4e0422d69308f6a79aec8bf2be76128b469575c9accd16
+MISC metadata.xml 660 RMD160 e702790d0360ed116af704ed28853032cc7d6766 SHA1 dfdb155280474204825402197b97f309c209ad46 SHA256 63e29412c0f9e4273d45d7ccf40334497029e0de8a2f1bcea5f856f889dead45
