@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='bind8-stats'> Enables BIND8 like NSTATS and 
+			XSTATS </flag>
+		<flag name='dnssec'> Enable DNSSEC support </flag>
+		<flag name='largefile'> Enable largefile support </flag>
+		<flag name='nsec3'> Enable NSEC3 support </flag>
+		<flag name='nsid'> Enable NSID support </flag>
+		<flag name='root-server'> Configure NSD as a root server 
+			</flag>
+		<flag name='runtime-checks'> Enable runtime checks 
+			</flag>
+		<flag name='tsig'> Enable TSIG support </flag>
+	</use>
 </pkgmetadata>
